--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Prueba para Sanitas de una calculadora</description>
 	<properties>
 		<java.version>19</java.version>
+		<openapi.version>1.6.14</openapi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,7 +36,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.14</version>
+			<version>${openapi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.iteriam</groupId>
